--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@heroui/react": "^2.7.5",
     "@heroui/theme": "^2.4.12",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-redux": "^9.2.0",
     "swr": "^2.3.3"
   },
   "devDependencies": {
