--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@heroui/react": "^2.7.5",
     "@heroui/theme": "^2.4.12",
     "@reduxjs/toolkit": "^2.6.1",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
@@ -22,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
+    "stripe": "^18.0.0",
     "swr": "^2.3.3"
   },
   "devDependencies": {
