--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "playwright": "^1.52.0",
     "react": "^19.0.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
