--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/typography": "^0.5.16",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
